<resources>
    <string name="name_company">迈拓仪表股份有限公司</string>
    <string name="login_now">现在登陆</string>
    <string name="login_later">以后登陆</string>
    <string name="welcome_to_njmeter">欢迎使用迈拓仪表客户端</string>
    <string name="welcome_introduction">智慧水务的未来：“智造”与“慧用”，智慧创造美好生活</string>
    <string name="function">物联网</string>
    <string name="function_introduction">大数据、工业4.0、互联网+、智能仪表、物联网，科技成就未来</string>
    <string name="tips_and_tricks">多功能</string>
    <string name="tips_introduction">遥控开关阀、用水状态实时查看、用水统计与查询，十八般武器样样都有</string>
    <string name="scan_qr_code">将取景框对准二维码\n即可自动扫描</string>
    <string name="back">返回</string>
    <string name="flashlight">闪光灯</string>
    <string name="operate">操作</string>
    <string name="operate_hydrant">仪表操作</string>
    <string name="operate_meter">仪表操作</string>
    <string name="statistics">统计</string>
    <string name="information_use_water">用水详情</string>
    <string name="time">时间：</string>
    <string name="method">方式：</string>
    <string name="id_meter">表号：</string>
    <string name="consumption">用量：</string>
    <string name="dialog_btn_exit">退&#160;&#160;&#160;&#160;&#160;&#160;&#160;&#160;出</string>
    <string name="dialog_btn_reLogin">重新登录</string>
    <string name="dialog_input_screenshot">截&#160;&#160;&#160;&#160;屏</string>
    <string name="dialog_input_clear">清&#160;&#160;&#160;&#160;空</string>
    <string name="dialog_ok">确&#160;&#160;&#160;&#160;定</string>
    <string name="dialog_input_continue">继&#160;&#160;&#160;&#160;续</string>
    <string name="dialog_loading">数据加载中……</string>
    <string name="id_app2">用户ID：</string>
    <string name="id_hydrant2">消火栓ID：</string>
    <string name="open_lock">开阀门锁</string>
    <string name="close_lock">关阀门锁</string>
    <string name="choose_start_time">请选择起始日期:</string>
    <string name="choose_end_time">请选择结束日期:</string>
    <string name="search2">查    询</string>
    <string name="time_use_water">用水时间</string>
    <string name="range_time">(开始~结束)</string>
    <string name="id_hydrant">消火栓ID</string>
    <string name="id_user">用户ID</string>
    <string name="method_open_lock">开阀\n方式</string>
    <string name="consumption_water">用水量</string>
    <string name="total_consumption_water">总用水量</string>
    <string name="unit_consumption_water">(立方米)</string>
    <string name="show_list">列表显示</string>
    <string name="show_chart">图表显示</string>
    <string name="last_twenty_times">最近20次用水量趋势图</string>
    <string name="total_times">历史总用水次数:</string>
    <string name="total_consumption">历史总用水量:</string>
    <string name="max_consumption">历史最高用水量:</string>
    <string name="min_consumption">历史最低用水量:</string>
    <string name="average_consumption">历史平均用水量:</string>
    <string name="example_consumption">000.000m³</string>
    <string name="example_times">0次</string>
    <string name="start_time">开始时间</string>
    <string name="end_time">结束时间</string>
    <string name="contact">联系电话:+86 025&#8211;86981981 86981982\n联系地址:江苏省南京市滨江经济开发区喜燕路5号\n版权所有 © 迈拓仪表股份有限公司 2018</string>
    <string name="located">定位</string>
    <string name="satellite">卫星</string>
    <string name="compass">指南</string>
    <string name="unknown">未知</string>
    <string name="zero">0</string>
    <string name="dialog_input_title2">请输入相关补充信息</string>
    <string name="information_meet_the_requirements">共查询到n条符合要求的信息</string>
    <string name="choose_one">(请点击选择一条)</string>
    <string name="photos_num">%1$d张</string>
    <string name="current_of_all">%1$d/%2$d</string>
    <string name="msg_maxi_capacity">已达到照片选择上限</string>
    <string name="commit">确定</string>
    <string name="time_commit2">提交时间</string>
    <string name="information_alarm_hydrant">报警信息</string>
    <string name="details_alarm_hydrant">报警信息详情</string>
    <string name="commit_num">确定(%1$d/%2$d)</string>
    <string name="platform_hydrant">智能消火栓</string>
    <string name="platform_water_meter">超声水表</string>
    <string name="platform_bluetooth_device">蓝牙工具</string>
    <string name="bluetooth_water_meter">超声波水表</string>
    <string name="bluetooth_heat_meter">超声波热量表</string>
    <string name="bluetooth_hydrant">智能消火栓</string>
    <string name="bluetooth_valve">智能控制阀</string>
    <string name="bluetooth_collector">无线采集终端</string>
    <string name="bluetooth_lora">无线LoRa设定</string>
    <string name="platform_read_waterMeter">机械表抄表</string>
    <string name="pages">1024张</string>
    <string name="time2">时间</string>
    <string name="setting">设置</string>
    <string name="item">项目</string>
    <string name="current_data">当前数据</string>
    <string name="id_current_user">当前用户ID</string>
    <string name="dash">—</string>
    <string name="time_open_lock">开锁时间</string>
    <string name="device_open_lock">开锁设备</string>
    <string name="consumption_current_water">当前用水量</string>
    <string name="state_current_use">当前使用状态</string>
    <string name="not_close_tightly">未关紧阀</string>
    <string name="leakage_without_user">无用户漏水</string>
    <string name="search_information">信息查询</string>
    <string name="show_list_chart">图表展示</string>
    <string name="address_hydrant">消火栓地点</string>
    <string name="imei_hydrant">消火栓IMEI</string>
    <string name="imei2">IMEI</string>
    <string name="address_hierarchy">层级地址</string>
    <string name="address_install">安装地址</string>
    <string name="create_time">创建时间</string>
    <string name="map">地图</string>
    <string name="map_navigation">地图导航</string>
    <string name="write_feedback">请填写反馈信息</string>
    <string name="tips_search_hydrant_warning">查询说明</string>
    <string name="sizeRange_search_waterMeter">水表查询口径设置</string>
    <string name="timeRange_search_waterMeter">水表查询时间设置</string>
    <string name="rowsPerPage_search_waterMeter">每页显示条数设置</string>
    <string name="tips_search_hydrant_warning2">一、点击“查询”按钮将查询所有消火栓最后一次上传的报警信息，并与所选的报警项进行匹配，至少有一项相符的消火栓将被筛选并显示；\n二、点击查询结果的每一个消火栓标签可以显示该消火栓本次报警的详细信息；\n三、选择自动查询将每隔一定时间查询一次所勾选的报警项并刷新数据，自动查询消耗流量较多，建议在WiFi下使用；\n四、自动查询时间间隔可在下方设置，设置后需关闭再打开自动查询功能或重启应用生效。</string>
    <string name="hydrant_id_optional">消火栓ID(选填)：</string>
    <string name="tips_feedback">请如实填写使用过程中遇到的问题，多次提交无关信息可能导致封号</string>
    <string name="modification_alarm_enabled">报警使能修改</string>
    <string name="items_hydrant_alarm">报警项目</string>
    <string name="enabled">使能</string>
    <string name="state_water_pressure">水压状态</string>
    <string name="water_pressure_mutation">水压突变</string>
    <string name="state_slant">垂直状态</string>
    <string name="state_slant_hydrant">消火栓倾斜</string>
    <string name="state_vibration">震动状态</string>
    <string name="state_cover">盖子状态</string>
    <string name="split_cover">盖子被拆</string>
    <string name="state_battery">电池状态</string>
    <string name="split_battery">电池被拆</string>
    <string name="state_temperature">温度状态</string>
    <string name="low_temperature_water">水温低</string>
    <string name="state_lock_status">阀门锁状态</string>
    <string name="state_lock_opened">阀门锁开</string>
    <string name="close_valve">阀门关闭</string>
    <string name="close_tightly_valve">阀门关紧</string>
    <string name="not_close_tightly_valve">阀门未关紧</string>
    <string name="temperature_measurement_short_circuit">测温短路</string>
    <string name="temperature_measurement_open_circuit">测温断路</string>
    <string name="water_exist">是否有水</string>
    <string name="hydrant_no_water_exist">消火栓无水</string>
    <string name="gps_position">GPS定位</string>
    <string name="rate_capacity">量程范围</string>
    <string name="over_rate_capacity">超量程范围</string>
    <string name="voltage_battery">电池电压</string>
    <string name="state_voltage_battery">电池电压状态</string>
    <string name="low_voltage_battery">电池电压低</string>
    <string name="state_water_leakage">漏水状态</string>
    <string name="reverse_water">水流反向</string>
    <string name="reconnect_gprs">GPRS重连</string>
    <string name="warning_modify">☆非专业人员请勿修改</string>
    <string name="use_last_data">使用上次设置的值</string>
    <string name="extra_information_hydrant">如果定位信息不准确或有其他相关信息需要补充可在此填写并点击“确定”按钮</string>
    <string name="modify_alarm_data">报警参数值修改</string>
    <string name="threshold_pressure_mutations">压力突变阈值:</string>
    <string name="threshold_pressure_mutations2">压力突变阈值</string>
    <string name="threshold_lower_pressure_limit">压力下限阈值:</string>
    <string name="threshold_lower_pressure_limit2">压力下限阈值</string>
    <string name="rate_leakage_flow">漏水流速:</string>
    <string name="rate_leakage_flow2">漏水流速</string>
    <string name="cubic_metres_per_hour">m³/h</string>
    <string name="timeout_leakage_flow">漏水超时:</string>
    <string name="timeout_leakage_flow2">漏水超时</string>
    <string name="lower_temperature_limit">温度下限:</string>
    <string name="lower_temperature_limit2">温度下限</string>
    <string name="variation_vibration">震动变化量:</string>
    <string name="variation_vibration2">震动变化量</string>
    <string name="zero_zero_zero_zero">0000</string>
    <string name="zero_zero_zero_zero_zero_zero_zero_zero">00000000</string>
    <string name="unit_pressure">bar</string>
    <string name="examplePressureBar">%1$sbar</string>
    <string name="examplePressureMpa">%1$sMpa</string>
    <string name="example_temperature">%1$s℃</string>
    <string name="example_voltage">%1$sV</string>
    <string name="example_frequency">%1$sHz</string>
    <string name="example_ElectricCurrent">%1$sA</string>
    <string name="example_power_kW">%1$skW</string>
    <string name="unit_time">分钟</string>
    <string name="unit_temperature">℃</string>
    <string name="reminder_metter">江苏迈拓提示您</string>
    <string name="select_point_type">请选择测点类型</string>
    <string name="input_id_hydrant">输入消火栓ID号</string>
    <string name="scan_hydrant_successfully">消火栓识别成功</string>
    <string name="incorrect_barcode">不是正确的智能消火栓二维码</string>
    <string name="reminder_open_gps">&#160;&#160;&#160;&#160;&#160;&#160;&#160;&#160;当前GPS关闭，必须打开GPS才能提交定位信息，请到设置页面打开GPS。</string>
    <string name="warning_read_water_meter">&#160;&#160;&#160;&#160;&#160;&#160;&#160;&#160;根据当前抄表值计算出本期用水量为负数，请核实，如果确定数据无误请将水表状态改为异常。</string>
    <string name="warning_delete_database">&#160;&#160;&#160;&#160;&#160;&#160;&#160;&#160;您将删除本地保存的所有表册信息（包含您的抄表记录），请确保您的抄表数据已经全部提交到服务器，否则将会丢失您的抄表记录，是否继续删除？</string>
    <string name="warning_redownload">&#160;&#160;&#160;&#160;&#160;&#160;&#160;&#160;您已经下载过该版本文件，是否直接安装？</string>
    <string name="warning_delete_history">&#160;&#160;&#160;&#160;&#160;&#160;&#160;&#160;您将删除该条搜索记录，是否继续删除？</string>
    <string name="warning_delete_history_all">&#160;&#160;&#160;&#160;&#160;&#160;&#160;&#160;您将删除所有历史搜索记录，是否继续删除？</string>
    <string name="warning_delete_photos">&#160;&#160;&#160;&#160;&#160;&#160;&#160;&#160;您将删除本地所有保存的抄表照片，请确保您的抄表数据已经全部提交到服务器，否则您的抄表数据可能无法上传，是否继续删除？</string>
    <string name="warning_delete_excel">&#160;&#160;&#160;&#160;&#160;&#160;&#160;&#160;您将删除所有导出的抄表记录，请确保您不再使用这些表格，是否继续删除？</string>
    <string name="reminder_close_bluetooth">&#160;&#160;&#160;&#160;&#160;&#160;&#160;&#160;关闭蓝牙可以节约手机用电，退出本页面时是否关闭蓝牙？</string>
    <string name="reminder_read_repeat">&#160;&#160;&#160;&#160;&#160;&#160;&#160;&#160;该用户本期已抄表或用水信息已提交，是否重新抄表？</string>
    <string name="reminder_logout_status">&#160;&#160;&#160;&#160;&#160;&#160;&#160;&#160;您的江苏迈拓账号于%s在其它设备上登陆，如果不是您本人操作，您的密码可能已泄露，请及时修改密码或联系管理员。</string>
    <string name="read_alarm_data">读取报\n警参数</string>
    <string name="set_alarm_data">设置报\n警参数</string>
    <string name="read_alarm_state">读取报\n警状态</string>
    <string name="read_hydrant_data">读取表\n数据</string>
    <string name="read_gps">读取GPS\n坐标</string>
    <string name="refresh_gps">刷新GPS\n坐标</string>
    <string name="read_current_use_data">读取当前\n使用数据</string>
    <string name="read_history_use_data">读取历史\n使用记录</string>
    <string name="read_alarm_enabled">读取报\n警使能</string>
    <string name="NominalDiameter">公称直径</string>
    <string name="ReadMeterTime">抄表时间</string>
    <string name="CommitTime">上传时间</string>
    <string name="MeterStatus">表具状态</string>
    <string name="ValveStatus">阀门状态</string>
    <string name="HierarchyAddress">层级地址</string>
</resources>