<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:background="@color/deep_orange_200"
    android:orientation="vertical">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center_vertical"
        android:orientation="horizontal">

        <TextView
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:gravity="center"
            android:padding="@dimen/dp_5"
            android:text="设备编号"
            android:textSize="@dimen/sp_14"
            android:textStyle="bold" />

        <View
            android:layout_width="@dimen/dp_1"
            android:layout_height="match_parent"
            android:background="@color/gray_slight" />

        <TextView
            android:id="@+id/tvMeterId"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1.2"
            android:gravity="center"
            android:padding="@dimen/dp_5"
            android:textSize="@dimen/sp_14" />

        <View
            android:layout_width="@dimen/dp_1"
            android:layout_height="match_parent"
            android:background="@color/gray_slight" />

        <TextView
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:gravity="center"
            android:padding="@dimen/dp_5"
            android:text="@string/NominalDiameter"
            android:textSize="@dimen/sp_14"
            android:textStyle="bold" />

        <View
            android:layout_width="@dimen/dp_1"
            android:layout_height="match_parent"
            android:background="@color/gray_slight" />

        <TextView
            android:id="@+id/tvMeterSize"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1.2"
            android:gravity="center"
            android:padding="@dimen/dp_5"
            android:textSize="@dimen/sp_14" />
    </LinearLayout>

    <View
        android:layout_width="match_parent"
        android:layout_height="@dimen/dp_1"
        android:background="@color/gray_slight" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center_vertical"
        android:orientation="horizontal">

        <TextView
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:gravity="center"
            android:padding="@dimen/dp_5"
            android:text="设定流速"
            android:textSize="@dimen/sp_14"
            android:textStyle="bold" />

        <View
            android:layout_width="@dimen/dp_1"
            android:layout_height="match_parent"
            android:background="@color/gray_slight" />

        <TextView
            android:id="@+id/tvFlowRate"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1.2"
            android:gravity="center"
            android:padding="@dimen/dp_5"
            android:textSize="@dimen/sp_14" />

        <View
            android:layout_width="@dimen/dp_1"
            android:layout_height="match_parent"
            android:background="@color/gray_slight" />

        <TextView
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:gravity="center"
            android:padding="@dimen/dp_5"
            android:text="当前圈数"
            android:textSize="@dimen/sp_14"
            android:textStyle="bold" />

        <View
            android:layout_width="@dimen/dp_1"
            android:layout_height="match_parent"
            android:background="@color/gray_slight" />

        <TextView
            android:id="@+id/tvTurns"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1.2"
            android:gravity="center"
            android:padding="@dimen/dp_5"
            android:textSize="@dimen/sp_14" />

    </LinearLayout>

    <View
        android:layout_width="match_parent"
        android:layout_height="@dimen/dp_1"
        android:background="@color/gray_slight" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center_vertical"
        android:orientation="horizontal">

        <TextView
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:gravity="center"
            android:padding="@dimen/dp_5"
            android:text="累计当量"
            android:textSize="@dimen/sp_14"
            android:textStyle="bold" />

        <View
            android:layout_width="@dimen/dp_1"
            android:layout_height="match_parent"
            android:background="@color/gray_slight" />

        <TextView
            android:id="@+id/tvFlow"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1.2"
            android:gravity="center"
            android:padding="@dimen/dp_5"
            android:textSize="@dimen/sp_14" />

        <View
            android:layout_width="@dimen/dp_1"
            android:layout_height="match_parent"
            android:background="@color/gray_slight" />

        <TextView
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:gravity="center"
            android:padding="@dimen/dp_5"
            android:text="水流温度"
            android:textSize="@dimen/sp_14"
            android:textStyle="bold" />

        <View
            android:layout_width="@dimen/dp_1"
            android:layout_height="match_parent"
            android:background="@color/gray_slight" />

        <TextView
            android:id="@+id/tvTemperature"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1.2"
            android:gravity="center"
            android:padding="@dimen/dp_5"
            android:textSize="@dimen/sp_14" />
    </LinearLayout>

    <View
        android:layout_width="match_parent"
        android:layout_height="@dimen/dp_1"
        android:background="@color/gray_slight" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center_vertical"
        android:orientation="horizontal">

        <TextView
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:gravity="center"
            android:padding="@dimen/dp_5"
            android:text="@string/ValveStatus"
            android:textSize="@dimen/sp_14"
            android:textStyle="bold" />

        <View
            android:layout_width="@dimen/dp_1"
            android:layout_height="match_parent"
            android:background="@color/gray_slight" />

        <TextView
            android:id="@+id/tvValveStatus"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1.2"
            android:gravity="center"
            android:padding="@dimen/dp_5"
            android:textSize="@dimen/sp_14" />

        <View
            android:layout_width="@dimen/dp_1"
            android:layout_height="match_parent"
            android:background="@color/gray_slight" />

        <TextView
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:gravity="center"
            android:padding="@dimen/dp_5"
            android:text="@string/MeterStatus"
            android:textSize="@dimen/sp_14"
            android:textStyle="bold" />

        <View
            android:layout_width="@dimen/dp_1"
            android:layout_height="match_parent"
            android:background="@color/gray_slight" />

        <TextView
            android:id="@+id/tvMeterStatus"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1.2"
            android:gravity="center"
            android:padding="@dimen/dp_5"
            android:textSize="@dimen/sp_14" />
    </LinearLayout>

    <View
        android:layout_width="match_parent"
        android:layout_height="@dimen/dp_1"
        android:background="@color/gray_slight" />

    <LinearLayout
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <TextView
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:gravity="center"
            android:padding="@dimen/dp_5"
            android:text="休眠时段"
            android:textStyle="bold" />

        <View
            android:layout_width="@dimen/dp_1"
            android:layout_height="match_parent"
            android:background="@color/gray_slight" />

        <TextView
            android:id="@+id/tvSleepTime"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1.2"
            android:gravity="center"
            android:padding="@dimen/dp_5" />

        <View
            android:layout_width="@dimen/dp_1"
            android:layout_height="match_parent"
            android:background="@color/gray_slight" />

        <TextView
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:gravity="center"
            android:padding="@dimen/dp_5"
            android:text="上传间隔"
            android:textStyle="bold" />

        <View
            android:layout_width="@dimen/dp_1"
            android:layout_height="match_parent"
            android:background="@color/gray_slight" />

        <TextView
            android:id="@+id/tvUploadInterval"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1.2"
            android:gravity="center"
            android:padding="@dimen/dp_5" />
    </LinearLayout>

    <View
        android:layout_width="match_parent"
        android:layout_height="@dimen/dp_1"
        android:background="@color/gray_slight" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center_vertical"
        android:orientation="horizontal">

        <TextView
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:gravity="center"
            android:padding="@dimen/dp_5"
            android:text="@string/ReadMeterTime"
            android:textSize="@dimen/sp_14"
            android:textStyle="bold" />

        <View
            android:layout_width="@dimen/dp_1"
            android:layout_height="match_parent"
            android:background="@color/gray_slight" />

        <TextView
            android:id="@+id/tvCreateTime"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1.2"
            android:gravity="center"
            android:maxLines="2"
            android:padding="@dimen/dp_5"
            android:textSize="@dimen/sp_14" />

        <View
            android:layout_width="@dimen/dp_1"
            android:layout_height="match_parent"
            android:background="@color/gray_slight" />

        <TextView
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:gravity="center"
            android:padding="@dimen/dp_5"
            android:text="@string/CommitTime"
            android:textSize="@dimen/sp_14"
            android:textStyle="bold" />

        <View
            android:layout_width="@dimen/dp_1"
            android:layout_height="match_parent"
            android:background="@color/gray_slight" />

        <TextView
            android:id="@+id/tvCommitTime"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1.2"
            android:gravity="center"
            android:maxLines="2"
            android:padding="@dimen/dp_5"
            android:textSize="@dimen/sp_14" />
    </LinearLayout>

    <View
        android:layout_width="match_parent"
        android:layout_height="@dimen/dp_1"
        android:background="@color/gray_slight" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center_vertical"
        android:orientation="horizontal">

        <TextView
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:gravity="center"
            android:padding="@dimen/dp_5"
            android:text="@string/HierarchyAddress"
            android:textSize="@dimen/sp_14"
            android:textStyle="bold" />

        <View
            android:layout_width="@dimen/dp_1"
            android:layout_height="match_parent"
            android:background="@color/gray_slight" />

        <View
            android:layout_width="@dimen/dp_1"
            android:layout_height="match_parent" />

        <TextView
            android:id="@+id/tv_address"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="3.4"
            android:gravity="center"
            android:maxLines="2"
            android:padding="@dimen/dp_5"
            android:textSize="@dimen/sp_14" />

        <View
            android:layout_width="@dimen/dp_1"
            android:layout_height="match_parent" />
    </LinearLayout>

    <View
        android:layout_width="match_parent"
        android:layout_height="@dimen/dp_1"
        android:background="@color/gray_slight" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center_vertical"
        android:orientation="horizontal"
        android:padding="@dimen/dp_3">

        <Button
            android:id="@+id/btn_historyData"
            style="@style/button_common_blue_small"
            android:layout_width="0dp"
            android:layout_weight="1"
            android:text="历史数据" />

        <Button
            android:id="@+id/btn_operateMeter"
            style="@style/button_common_blue_small"
            android:layout_width="0dp"
            android:layout_marginLeft="@dimen/dp_5"
            android:layout_marginStart="@dimen/dp_5"
            android:layout_weight="1"
            android:text="通讯服务" />
    </LinearLayout>

    <View
        android:layout_width="match_parent"
        android:layout_height="@dimen/dp_1"
        android:background="@color/gray_slight" />

</LinearLayout>